User: ignores as collection of resource instead of not modifying the resource called but current_user
