# server/app/controllers/api/users_controller.rb
@@ -4,8 +4,9 @@ require 'mini_magick'
 
 module Api
   class UsersController < ApiController
-    before_action :set_user, only: %i[show update upload_avatar create_ignore delete_ignore]
-    before_action :allowed?, only: %i[update upload_avatar create_ignore delete_ignore]
+    before_action :set_user, only: %i[show update upload_avatar]
+    before_action :allowed?, only: %i[update upload_avatar]
+    # before_action :update_ignores, only: %i[update]
 
     UserReducer = Rack::Reducer.new(
       User.all,
@@ -24,6 +25,7 @@ module Api
 
       disconnect_banned_user(@user.id) if user_params.key?(:banned) && user_params.fetch(:banned) == true
 
+      update_ignores
       @user.update!(user_params)
       json_response(@user)
     end
@@ -44,18 +46,16 @@ module Api
       json_response({ image_url: url })
     end
 
-    # tldr: what the hell.
-    def create_ignore
-      ignore = UserIgnore.create!(user: current_user, user_ignored: @user)
-      json_response(ignore, 200)
-    end
-
-    def delete_ignore
-      UserIgnore.where(user: current_user).destroy_by(user_ignored: @user)
-      head :no_content
-    end
-
     private
+
+    def update_ignores
+      return unless params[:ignore_ids].present?
+
+      @user.user_ignores.destroy_all
+      return unless params[:ignore_ids][0].empty? == false
+
+      params[:ignore_ids].each { |t| UserIgnore.create!(user: current_user, user_ignored_id: t) }
+    end
 
     def allowed?
       return unless current_user.id != @user.id && current_user.admin? == false
@@ -64,7 +64,7 @@ module Api
     end
 
     def user_params
-      params.require(:user).permit(:two_factor, :nickname, :first_login, :banned, :guild_id)
+      params.permit(:two_factor, :nickname, :first_login, :banned, :guild_id)
     end
 
     def set_user
