# server/public/swagger/swagger.yaml
@@ -640,44 +640,6 @@ paths:
                 properties:
                   image_url:
                     type: string
-  "/api/users/{id}/ignores":
-    post:
-      summary: Ignores a user
-      description: Allows current_user to ignore messages from a user
-      tags:
-        - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-          description: User ID
-      responses:
-        '200':
-          description: user ignored
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  user_id:
-                    $ref: '#/components/schemas/integer_list'
-    delete:
-      summary: Stop ignoring user
-      description: Allows current_user to stop ignoring user's messages
-      tags:
-        - Users
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-          description: User ID
-      responses:
-        '204':
-          description: user no more ignored
 servers:
   - url: http://{defaultHost}:3000
     variables:
@@ -764,6 +726,8 @@ components:
         uid:
           type: string
         chat_ids:
+          $ref: '#/components/schemas/integer_list'
+        ignore_ids:
           $ref: '#/components/schemas/integer_list'
     guild_response:
       allOf:
